# rschat

./: .gitignore  Cargo.toml  README.md
src/: client.rs  main.rs  server.rs  session.rs
src/client/: app.rs  background_task.rs  client.rs  command.rs  error.rs  input_controller.rs  input_handler.rs  message_channel.rs  mod.rs  session.rs  tui.rs  util.rs
src/client/popup/: login.rs  mod.rs  register.rs
src/command/: command.rs
src/crypto/: hash.rs
src/db/: user.rs
src/packet/: mod.rs  packet.rs
src/server/: mod.rs  server.rs  session.rs
