[package]
name = "rschat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# database
rusqlite = { version = "0.29.0", features = ["bundled"] }

# encoding / hash
base64ct = { version = "1.6.0", features = ["alloc"] } 
sha2 = "0.10"
