[package]
name = "rschat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# database
mysql = "24.0.0"

# encoding / hash
base64ct = { version = "1.6.0", features = ["alloc"] }
sha2 = "0.10"
rand = "0.8.5"

# TUI
ratatui = "0.24.0"
crossterm = "0.27.0"
